--- a/web/components/DraftDashboard/DraftSettings.module.scss
+++ b/web/components/DraftDashboard/DraftSettings.module.scss
@@ -174,6 +174,17 @@
   }
 }
 
+.toggleRow {
+  display: flex;
+  align-items: center;
+  gap: v.$space-sm;
+}
+
+.helperText {
+  font-size: v.$font-size-xs;
+  color: v.$text-secondary;
+}
+
 .label {
   font-size: v.$font-size-sm;
   font-weight: 500;
