header adjustment - main layout

--- a/web/components/Layout/Header/Header.module.scss
+++ b/web/components/Layout/Header/Header.module.scss
@@ -22,6 +22,7 @@ $mobile-header-height: 65px;
     background-color: #181818;
     transition: transform ease 0.3s;
     z-index: 1000;
+    padding-left: 3%;
 
     button {
       all: unset;
